<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CardPetSitter"
    android:orientation="vertical">

<!--    <include layout="@layout/activity_bottom_navigation_bar"/>-->


<LinearLayout
    android:id="@+id/card_liste_petsitter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:padding="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@drawable/rounded_corner_red_transparence"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/rectangle_66"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vanessa M."
                android:textColor="@color/white"
                android:textSize="25dp"/>

            <TextView
                android:id="@+id/adresse"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:text="Montreal, Qc, H4P"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:textSize="15dp"/>


        </LinearLayout>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="11dp"
                android:src="@drawable/like" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:minHeight="55dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="3"
                    android:layout_marginTop="10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:src="@drawable/image_31"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:src="@drawable/image_31"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:src="@drawable/image_31"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:src="@drawable/image_31"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:src="@drawable/image_31"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="3"
                    android:layout_marginLeft="10dp"
                    android:minHeight="55dp">


                    <Button

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/contacter"
                        android:textSize="11.5dp"
                        android:layout_weight="3"
                        android:backgroundTint="@color/green"
                        android:minWidth="0dp"
                        android:text="@string/contacter"
                        android:textColor="@color/white"
                        android:theme="@style/MyMaterialTheme"
                        android:gravity="center"/>


                    <Button
                        android:id="@+id/reservervation_liste_pet_sitter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/green"
                        android:textSize="11.5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="3"
                        android:minWidth="0dp"
                        android:contentDescription="@string/reservation"
                        android:text="@string/profil"
                        android:textColor="@color/white"
                        android:theme="@style/MyMaterialTheme"
                        android:gravity="center"/>






                </LinearLayout>

            </LinearLayout>



        </LinearLayout>


    </LinearLayout>


</LinearLayout>

</LinearLayout>
