<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >


    <LinearLayout
        android:id="@+id/card_lite_demande"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="390dp"
            android:background="@drawable/rounded_corner_red_transparence"
            android:padding="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:src="@drawable/rectangle_66"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Vanessa M."
                        android:textColor="@color/white"
                        android:textSize="25dp"/>-

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Montreal, Qc, H4P"
                        android:textColor="@color/white"
                        android:layout_marginLeft="5dp"
                        android:textSize="15dp"/>


                </LinearLayout>

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="1"
                    android:layout_marginTop="11dp"
                    android:src="@drawable/like" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:minHeight="55dp">

                    // image badge


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="3"
                        android:layout_marginLeft="10dp"
                        android:minHeight="55dp">


                        <Button
                            android:id="@+id/buttom_contacter_pet_sitter"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/contacter"
                            android:textSize="11.5dp"
                            android:layout_weight="3"
                            android:backgroundTint="@color/blue"
                            android:minWidth="0dp"
                            android:text="@string/contacter"
                            android:textColor="@color/white"
                            android:theme="@style/MyMaterialTheme"
                            android:gravity="center"/>


                        <Button
                            android:id="@+id/button_annuler_contrat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/red"
                            android:textSize="11.5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="3"
                            android:minWidth="0dp"
                            android:contentDescription="@string/reservation"
                            android:text="@string/annuler"
                            android:textColor="@color/white"
                            android:theme="@style/MyMaterialTheme"
                            android:gravity="center"/>




                    </LinearLayout>

                </LinearLayout>



            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2px"
                android:background="@color/white"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        >


                        <TextView
                            android:id="@+id/date_reservation_demande"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="Reservation faite le 16/08/2020"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />


                    </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:text="Date de debut "
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="2"
                        android:text="Date de fin "
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        android:textStyle="bold" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">


                    <TextView
                        android:id="@+id/date_debut_contrat_demande"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:text="17/08/2020"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/date_fin_contrat_demande"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="2"
                        android:text="18/08/2020 "
                        android:textColor="@color/white"
                        android:textSize="13sp" />


                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/description_etat_demande"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="Cette reservation est en attente"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/button_commentaire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:contentDescription="@string/commentaire"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/commentaire"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="11.5dp"
                    android:theme="@style/MyMaterialTheme"
                    android:visibility="visible"
                    tools:visibility="visible" />

            </LinearLayout>







        </LinearLayout>


    </LinearLayout>










</LinearLayout>